--- a/app/src/main/res/layout/media_list_activity.xml
+++ b/app/src/main/res/layout/media_list_activity.xml
@@ -7,5 +7,5 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/list_background"/>
+        android:background="@color/light_light_grey"/>
 </LinearLayout>
