--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="light_grey">#DDD</color>
     <color name="white">#FFF</color>
+    <color name="black">#000</color>
+    <color name="light_light_grey">#F1F1F1</color>
 </resources>
