--- a/app/src/main/res/layout/media_list_item.xml
+++ b/app/src/main/res/layout/media_list_item.xml
@@ -24,4 +24,10 @@
         android:layout_weight="1"
         android:singleLine="true" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageViewDownloadingSatus"
+        android:src="@mipmap/ic_save" />
+
 </LinearLayout>
