--- a/app/src/main/res/layout/media_list_activity.xml
+++ b/app/src/main/res/layout/media_list_activity.xml
@@ -4,10 +4,18 @@
     android:layout_height="match_parent"
     android:id="@+id/media_list_root">
 
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/purchase_header"
+        layout="@layout/purchase_header">
+    </include>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/icons_recycle_list"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/light_light_grey"/>
+
 </LinearLayout>
